# Tesla

./: CMakeLists.txt  Main.qml  TitleModel.cpp  Titlemodel.h  main.cpp  resources.qrc
resources/database/: teslaDB.db
